# attention-roboros

./: CMakeLists.txt  README.md  calcularangulo.cpp  commands.txt  package.xml
src/: attention_main.cpp  gazebo_subscriber.cpp  move_head.cpp  neck_controller.cpp
src/attention_roboros/: GazeboGraph.cpp  GraphClient.cpp  NeckController.cpp  neck_controller.cpp
